--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,10 @@
 
 @import "minima";
 
+// Define defaults for each variable.
+
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+
 .about-page {
     display: flex;
     flex-wrap: wrap;
@@ -27,3 +31,51 @@
     /* Optional: Add padding or margin for spacing */
   }
   
+  .tag, a.tag {
+    display: inline-block;
+    vertical-align: central;
+    font-family: monospace;
+    font-size: 90%;
+    line-height: 1.5em;
+    padding: 0 .5em;
+    color: #007bff;
+    background-color: #f2f2f2;
+    border-radius: 5px
+}
+
+.archive {
+  margin-top:-1em;
+  margin-bottom:2.5em
+}
+
+.cp {
+  padding: 0;
+}
+
+.cp-title {
+  // font-family:merriweather,Helvetica,sans-serif;
+  font-size:1.2em;
+  font-weight:400;
+  margin-bottom:0
+}
+
+.cp-date {
+  font-size:.8em;
+  font-family: Consolas,Helvetica,sans-serif;
+  margin-top:-.1em;
+  color:#8c8c8c
+}
+
+.cp-listing {
+  margin-bottom:2em
+}
+
+.cp-desc {
+  margin: 0;
+  color: #8c8c8c;
+}
+
+h4 {
+  font-weight:500;
+  line-height:1.2
+}
