--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -14,7 +14,7 @@ layout: default
   {% for temptag in sortedtemptags %}
     {% assign tagitems = temptag | split: '#' %}
     {% capture tagname %}{{ tagitems[1] }}{% endcapture %}
-    <a href="/tag/{{ tagname }}"><code class="highligher-rouge"><nobr>{{ tagname }}</nobr></code></a>
+    <a href="/tag/{{ tagname }}" class="tag">{{ tagname }}</a>
   {% endfor %}
 </div>
 
@@ -27,7 +27,13 @@ layout: default
           <a href="{{ post.url | relative_url }}" class="post-link">{{ post.title }}</a>
         </h4>
         <p class="cp-desc">{{ post.excerpt }}</p>
-        <p class="cp-date">{{ post.date | date: "%d %b %Y" }} </p>
+        <p class="cp-date">
+          {{ post.date | date: "%d %b %Y" }}
+          ·
+          {% for tag in post.tags %}
+            <a href="/tag/{{ tagname }}" class="tag">{{ tag }}</a>
+          {% endfor %}
+        </p>
       </div>
     {% endfor %}
   </ul>
