--- a/assets/main.scss
+++ b/assets/main.scss
@@ -79,3 +79,22 @@ h4 {
   font-weight:500;
   line-height:1.2
 }
+
+
+.tag,
+a.tag {
+  display:inline-block;
+  vertical-align:central;
+  font-family:monospace;
+  font-size:90%;
+  line-height:1.5em;
+  padding:0 .5em;
+  color:#007bff;
+  background-color:#f2f2f2;
+  border-radius:5px
+}
+a.tag:hover {
+  color:#fff;
+  background-color:#007bff;
+  text-decoration:none
+}
