--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,51 +1,153 @@
 ---
 ---
-
 @import "minima";
+@import "fonts";
+
+:root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --c-light-text: #333;
+  --c-light-background: #fff;
+  --c-light-focus: #00ff00;
+  --c-light-interactive: #007bff;
+  --c-light-callout: #e6f2ff;
+  --c-dark-text: #fff;
+  --c-dark-subtext: #a6a6a6;
+  --c-dark-background: #333;
+  --c-dark-focus: #00ff00;
+  --c-dark-interactive: #66b0ff;
+  --c-dark-callout: #004a99;
+  --c-text: var(--c-light-text);
+  --c-background: var(--c-light-background);
+  --c-focus: var(--c-light-focus);
+  --c-interactive: var(--c-light-interactive);
+  --c-callout: var(--c-light-callout)
+}
+
+
 
 // Define defaults for each variable.
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
+  height: 100%
+}
 
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+body,
+p,
+pre {
+  font-family: $merriweather, Georgia, Times, serif
+}
+
+h1 {
+  margin-bottom: .5rem
+}
+
+h4 {
+  font-weight: 500;
+  line-height: 1.2
+}
+
+ul ul {
+  margin-bottom: 0
+}
+
+body,
+pre {
+  color: var(--dark)
+}
+
+code {
+  font-family: $fira-code, Menlo, Monaco, Consolas, liberation mono, courier new, monospace
+}
+
+pre {
+  overflow: auto;
+  display: block
+}
+
+figure {
+  margin: 0 0 1rem
+}
+
+img {
+  vertical-align: middle;
+  border-style: none
+}
+
+a {
+  text-decoration: none;
+  background-color: transparent;
+  color: var(--c-interactive)
+}
+
+a:hover {
+  color: #0056b3;
+  text-decoration: underline
+}
+
+.site-title {
+  margin-bottom: 1.15em
+}
 
 .about-page {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  .about-page .about-image {
-    flex: 1 1 50%; /* Adjusts to take half the space */
-    /* Optional: Add padding or margin as needed */
-  }
+  display: flex;
+  flex-wrap: wrap;
+}
 
-  .about-page .about-image img {
-    width: 50%; /* Adjust based on your preference */
-    max-width: 200px; /* Adjust to control the image size */
-    height: auto; /* Maintains aspect ratio */
-    border-radius: 50%; /* This makes the image round */
-    display: block; /* For centering, if needed */
-    margin: 0 auto; /* Center the image inside its container */
-  }
-    
-  .about-page .about-text {
-    flex: 1 1 50%; /* Adjusts to take half the space */
-    /* Optional: Add padding or margin for spacing */
-  }
-  
-  .tag, a.tag {
-    display: inline-block;
-    vertical-align: central;
-    font-family: monospace;
-    font-size: 90%;
-    line-height: 1.5em;
-    padding: 0 .5em;
-    color: #007bff;
-    background-color: #f2f2f2;
-    border-radius: 5px
+.about-page .about-image {
+  flex: 1 1 50%;
+  /* Adjusts to take half the space */
+  /* Optional: Add padding or margin as needed */
+}
+
+.about-page .about-image img {
+  width: 50%;
+  /* Adjust based on your preference */
+  max-width: 200px;
+  /* Adjust to control the image size */
+  height: auto;
+  /* Maintains aspect ratio */
+  border-radius: 50%;
+  /* This makes the image round */
+  display: block;
+  /* For centering, if needed */
+  margin: 0 auto;
+  /* Center the image inside its container */
+}
+
+.about-page .about-text {
+  flex: 1 1 50%;
+  /* Adjusts to take half the space */
+  /* Optional: Add padding or margin for spacing */
 }
 
 .archive {
-  margin-top:-1em;
-  margin-bottom:2.5em
+  margin-top: -1em;
+  margin-bottom: 2.5em
 }
 
 .cp {
@@ -53,48 +155,56 @@ $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 }
 
 .cp-title {
-  // font-family:merriweather,Helvetica,sans-serif;
-  font-size:1.2em;
-  font-weight:400;
-  margin-bottom:0
+  font-family: $merriweather, Helvetica, sans-serif;
+  font-size: 1.2em;
+  font-weight: 400;
+  margin-bottom: 0
+}
+
+.cp-title a {
+  border-bottom: none;
+  color: #333
+}
+
+.cp-title a:hover {
+  color: var(--indigo);
+  text-decoration: none
 }
 
 .cp-date {
-  font-size:.8em;
-  font-family: Consolas,Helvetica,sans-serif;
-  margin-top:-.1em;
-  color:#8c8c8c
+  font-size: .8em;
+  font-family: $montserrat, Helvetica, sans-serif;
+  margin-top: -.1em;
+  color: #8c8c8c
 }
 
 .cp-listing {
-  margin-bottom:2em
+  margin-bottom: 2em
 }
 
 .cp-desc {
+  font-family: raleway, Helvetica, sans-serif;
+  font-size: .85em;
   margin: 0;
-  color: #8c8c8c;
-}
-
-h4 {
-  font-weight:500;
-  line-height:1.2
+  color: #8c8c8c
 }
 
 
 .tag,
 a.tag {
-  display:inline-block;
-  vertical-align:central;
-  font-family:monospace;
-  font-size:90%;
-  line-height:1.5em;
-  padding:0 .5em;
-  color:#007bff;
-  background-color:#f2f2f2;
-  border-radius:5px
+  display: inline-block;
+  vertical-align: central;
+  font-family: monospace;
+  font-size: 90%;
+  line-height: 1.5em;
+  padding: 0 .5em;
+  color: var(--indigo);
+  background-color: #f2f2f2;
+  border-radius: 5px
 }
+
 a.tag:hover {
-  color:#fff;
-  background-color:#007bff;
-  text-decoration:none
+  color: #fff;
+  background-color: var(--indigo);
+  text-decoration: none
 }
