--- a/assets/main.scss
+++ b/assets/main.scss
@@ -66,6 +66,16 @@ h1 {
   margin-bottom: .5rem
 }
 
+.header h1 {
+  font-size:24px;
+  font-family:$montserrat, Helvetica, sans-serif;
+  text-transform:lowercase;
+  margin-top:0;
+  margin-bottom:0;
+  line-height:40px;
+  padding-bottom:19px
+}
+
 h4 {
   font-weight: 500;
   line-height: 1.2
