--- a/_layouts/bob-archive.html
+++ b/_layouts/bob-archive.html
@@ -10,11 +10,7 @@ layout: base
                     <a href="{{ post.url | relative_url }}" class="post-link">{{ post.title }}</a>
                 </h4>
                 <p class="cp-date">
-                    {{ post.date | date: "%d %b %Y" }}
-                    ·
-                    {% for tag in post.tags %}
-                    <a href="/tag/{{ tagname }}" class="tag">{{ tag }}</a>
-                    {% endfor %}
+                    Posted on {{ post.date | date: "%d %b %Y" }}
                 </p>
             </div>
         {% endif %}
