fix margin layouts for archive

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -46,7 +46,6 @@
 }
 
 
-
 // Define defaults for each variable.
 html {
   font-family: sans-serif;
@@ -54,6 +53,11 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
   height: 100%
+}
+
+.posts {
+  margin-left: auto;
+  margin-right: auto
 }
 
 body,
