--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,6 +45,12 @@
   --c-callout: var(--c-light-callout)
 }
 
+*,
+::after,
+::before {
+  box-sizing:border-box
+}
+
 
 // Define defaults for each variable.
 html {
@@ -169,25 +175,23 @@ hr {
   margin-left:auto
 }
 
-@media(min-width:576px) {
+.container>hr {
+  margin:30px 0
+}
+
+.container>ul {
+  margin-left: 0px;
+  padding-left: 40px;
+}
+
+@media(min-width:750px) {
   .container {
-    max-width:540px
+    max-width:750px
   }
 }
-@media(min-width:768px) {
-  .container {
-    max-width:720px
-  }
-}
-@media(min-width:992px) {
-  .container {
-    max-width:960px
-  }
-}
-@media(min-width:1200px) {
-  .container {
-    max-width:1140px
-  }
+
+li {
+  margin:0 20px 0 0
 }
 
 .home>hr {
@@ -303,6 +307,7 @@ a.tag:hover {
   margin-left:-22px;
   margin-bottom:12px
 }
+
 .home-bullets-posts li {
   margin-left:-38px;
   margin-bottom:10px;
