--- a/assets/main.scss
+++ b/assets/main.scss
@@ -324,3 +324,9 @@ a.tag:hover {
   margin-bottom:10px;
   list-style:none
 }
+
+.post h2 {
+  font-size:25px;
+  margin-bottom:20px;
+  margin-top:30px
+}
