--- a/assets/main.scss
+++ b/assets/main.scss
@@ -330,3 +330,12 @@ a.tag:hover {
   margin-bottom:20px;
   margin-top:30px
 }
+
+blockquote {
+  border-left: .25em solid var(--indigo);
+  color: var(--gray);
+  padding: 0 1em;
+  margin-left: 1.28em;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
