add utterances to post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,3 +17,13 @@ layout: default
 
     {{ content }}
 </div>
+
+<hr>
+
+<script src="https://utteranc.es/client.js"
+        repo="mjt91/mjt91-comments"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
