add bob intro section

--- a/_layouts/bob-archive.html
+++ b/_layouts/bob-archive.html
@@ -2,6 +2,8 @@
 layout: base
 ---
 
+{{ content }}
+
 <ul class="posts cp">
     {% for post in site.posts %}
         {% if post.categories contains 'best-of-boulevard' %}
