--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
     
         <div class="col-sm-9">
             <p>{{ site.description | escape }}</p>
-            <p>Subscribe via <a href="/rss/">RSS</a></p>
+            <p>Subscribe via <a href="/feed.xml">RSS</a></p>
         </div>
 
     </div>
