--- a/assets/main.scss
+++ b/assets/main.scss
@@ -519,3 +519,21 @@ kbd {
   line-height: 1.4;
   white-space: nowrap;
 }
+
+.header-link {
+  position: inline-block;
+  margin-left: 0.5em;
+  opacity: 0;
+  font-size: 16px;
+  -webkit-transition: opacity 0.2s ease-in-out 0.1s;
+  -moz-transition: opacity 0.2s ease-in-out 0.1s;
+  -ms-transition: opacity 0.2s ease-in-out 0.1s;
+}
+
+h2:hover .header-link,
+h3:hover .header-link,
+h4:hover .header-link,
+h5:hover .header-link,
+h6:hover .header-link {
+  opacity: 1;
+}
