--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,3 +27,4 @@ layout: base
         crossorigin="anonymous"
         async>
 </script>
+<script src="{{ '/assets/js/anchors.js' | relative_url }}"></script>
